# OpenPriors

./: LICENSE  Makefile  README.md  REPORT.md  ROADMAP.md
analogy/: README.md  pyproject.toml
analogy/results/: corpus_pair.json  solar_atom.json
analogy/src/analogy/: __init__.py  align.py  cli.py  examples.py  novelty.py  predicates.py
analogy/tests/: test_analogy.py  test_ascension.py  test_determinism.py  test_trickle.py
concept_graph/: README.md  pyproject.toml
concept_graph/docs/: lit-review-oar-kg.md  principles-continuity.md
concept_graph/graphs/: summary.json
concept_graph/graphs/arxiv-2006.06138/: concepts.jsonl  content_vector.json  dgroup.json  graph.json  graph.nt  metrics.json  relations.jsonl  triples.jsonl  verification.json
concept_graph/graphs/problem_04_review/: concepts.jsonl  content_vector.json  dgroup.json  graph.json  graph.nt  metrics.json  relations.jsonl  triples.jsonl  verification.json
concept_graph/graphs/problem_07/: concepts.jsonl  content_vector.json  dgroup.json  graph.json  graph.nt  metrics.json  relations.jsonl  triples.jsonl  verification.json
concept_graph/graphs/sample-text-riddles/: concepts.jsonl  content_vector.json  dgroup.json  graph.json  graph.nt  metrics.json  relations.jsonl  triples.jsonl  verification.json
concept_graph/src/concept_graph/: __init__.py  build.py  cli.py  schema.py  sme.py  verify.py
concept_graph/tests/: test_concept_graph.py
decomposer/: .gitignore  README.md  pyproject.toml  requirements.txt
decomposer/corpus/: manifest.json
decomposer/corpus/arxiv-2006.06138/source/: _region_.tex  appendix.tex  conformal_causal.bib  conformal_causal_arxiv_final.bbl  conformal_causal_arxiv_final.tex  counterfactual.tex  effect.tex  extension.tex  intro.tex  setup.tex
decomposer/corpus/problem_04_review/: problem_04_review.md
decomposer/corpus/problem_07/: problem_07.tex
decomposer/docs/: development-log.md  principles.md  schema.json  tool-guide.md
decomposer/docs/decisions/: 0001-format-and-tooling.md
decomposer/docs/lit-review/: 01-latex-html-parsing-tools.md  02-structure-schemas-and-formats.md  03-verification-and-principles.md
decomposer/runs/: summary.json
decomposer/runs/arxiv-2006.06138/: meta.json  trajectory.jsonl
decomposer/runs/arxiv-2006.06138/step-00-principles/: principles.json  step.json
decomposer/runs/problem_04_review/: meta.json  trajectory.jsonl
decomposer/runs/problem_07/: meta.json  trajectory.jsonl
decomposer/runs/sample-text-riddles/: meta.json  trajectory.jsonl
decomposer/skills/_template/: SKILL.md
decomposer/skills/classify-data-classes/: SKILL.md
decomposer/skills/decompose-overview/: SKILL.md
decomposer/skills/extract-principles/: SKILL.md
decomposer/skills/hierarchical-split/: SKILL.md
decomposer/skills/independent-verify/: SKILL.md
decomposer/skills/ingest-sources/: SKILL.md
decomposer/skills/normalize-deredundancy/: SKILL.md
decomposer/src/decomposer/: __init__.py  cli.py  pipeline.py  schema.py  serialize.py
decomposer/src/decomposer/adapters/: __init__.py  (+3 more)
decomposer/tests/: test_adapters_and_pipeline.py  test_html_adapter.py  test_invariants.py
grounding/: README.md  pyproject.toml
grounding/dgroups/: arxiv_2006_06138_main.json  banach_case.json  concentration_corpus.json  learning_corpus.json  nesterov_paper.json  online_learning_corpus.json  optimization_corpus.json  q1_full_proof.json  q2_target.json  riddles.json
grounding/docs/: banach-case-study.md
grounding/results/: banach_case.json  discrimination.json  grounding.json  solutions.json
grounding/src/grounding/: __init__.py  casestudy.py  cli.py  discrimination.py  load.py  solve.py  verify.py
grounding/tests/: test_casestudy.py  test_discrimination.py  test_grounding.py
matcher/: README.md  pyproject.toml
matcher/results/: invariance.json  similarity_matrix.json  systematicity.json
matcher/src/matcher/: __init__.py  cli.py  invariance.py  mac.py
matcher/tests/: test_matcher.py
retrieval/: README.md  pyproject.toml
retrieval/results/: decomposition.json  lineage.json  real_paper.json  retrieval.json
retrieval/src/retrieval/: __init__.py  cli.py  decompose.py  engine.py  index.py  lineage.py  realpaper.py
retrieval/tests/: test_decompose.py  test_index.py  test_lineage.py  test_real_paper.py  test_retrieval.py
(+116 files in other folders)
