[project]
name = "openpriors-grounding"
version = "0.1.0"
description = "OpenPriors prose->dgroup front end: sub-agent lifts prose into predicate-calculus description groups, gated by a deterministic grounding check, then solved by the analogy engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpriors-analogy"]  # wire via PYTHONPATH in this monorepo

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
grounding = "grounding.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
